welcome.lessons.welcome.variables.Variables.scala.error
Variables:11: error: ')' expected but '}' found.
	}
        ^